✨ (related charts) prevent layout shifts when navigating (#3887)

--- a/site/blocks/related-charts.scss
+++ b/site/blocks/related-charts.scss
@@ -101,8 +101,14 @@
 }
 
 .related-charts__chart {
+    .related-charts__figure {
+        height: $grapher-height;
+        margin-bottom: 1rem;
+    }
+
     figure {
         @include figure-grapher-reset;
+        margin-bottom: 0;
     }
 
     .gallery-navigation {
